--- a/class_notebooks/github_pages/index.ipynb
+++ b/class_notebooks/github_pages/index.ipynb
@@ -1045,9 +1045,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "github-pages",
+   "display_name": "CSCN8010_classic_ml",
    "language": "python",
-   "name": "python3"
+   "name": "cscn8010_classic_ml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1059,7 +1059,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
